tests/ui/type-alias-impl-trait/non-defining-method.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/non-defining-method.rs:16:17
   |
LL |     fn foo() -> Self::Bar<u32> {}
   |                 ^^^^^^^^^^^^^^ argument `u32` is not a generic parameter
   |
note: for this opaque type
  --> $DIR/non-defining-method.rs:15:19
   |
LL |     type Bar<T> = impl Sized;
   |                   ^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/non-defining-method.rs:16:17
   |
LL |     type Bar<T> = impl Sized;
   |                   ---------- the expected opaque type
LL |     fn foo() -> Self::Bar<u32> {}
   |        ---      ^^^^^^^^^^^^^^ expected opaque type, found `()`
   |        |
   |        implicitly returns `()` as its body has no tail or `return` expression
   |
   = note: expected opaque type `<() as Foo>::Bar<u32>`
                found unit type `()`
note: this item must have the opaque type in its signature in order to be able to register hidden types
  --> $DIR/non-defining-method.rs:16:8
   |
LL |     fn foo() -> Self::Bar<u32> {}
   |        ^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
